@@ -2,7 +2,7 @@
 name    = Task-BeLike-LESPEA
 author  = Adam Lesperance <lespea@gmail.com>
 license = Perl_5
-version = 2.002000
+version = 2.002001
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2012
